--- a/solr/Dockerfile
+++ b/solr/Dockerfile
@@ -9,13 +9,15 @@ ARG LUCENE_CHECKOUT="main"
 ARG SOLR_REPOSITORY="https://github.com/chlorochrule/solr"
 ARG SOLR_CHECKOUT="SNAPSHOT"
 
+ARG SOLR_INSTALL_DIR="/opt/solr"
+
 ENV JAVA_HOME="/usr/lib/jvm/java-11-openjdk" \
     SOLR_JETTY_HOST="0.0.0.0" \
     SOLR_USER="solr" \
     SOLR_UID="8983" \
     SOLR_GROUP="solr" \
     SOLR_GID="8983" \
-    PATH="/opt/solr/bin:/opt/mnt/bin:$PATH" \
+    PATH="$SOLR_INSTALL_DIR/bin:/opt/mnt/bin:$PATH" \
     SOLR_INCLUDE="/etc/default/solr.in.sh" \
     SOLR_HOME="/var/solr/data" \
     SOLR_PID_DIR="/var/solr" \
@@ -25,7 +27,7 @@ ENV JAVA_HOME="/usr/lib/jvm/java-11-openjdk" \
 RUN set -ex && \
     groupadd -r --gid $SOLR_GID $SOLR_GROUP && \
     useradd -r --uid $SOLR_UID --gid $SOLR_GID $SOLR_USER && \
-    yum install git java-11-openjdk java-11-openjdk-devel -y && \
+    yum install which git java-11-openjdk java-11-openjdk-devel -y && \
     mkdir /workspace && \
     cd /workspace && \
     git clone $LUCENE_REPOSITORY lucene && \
@@ -38,20 +40,21 @@ RUN set -ex && \
     git checkout $SOLR_CHECKOUT && \
     ./gradlew assemble && \
     ./gradlew dev && \
-    rm -rf /opt/solr && \
-    cp -r solr/packaging/build/dev /opt/solr && \
-    chown -R 0:0 /opt/solr && \
-    find /opt/solr -type d -print0 | xargs -0 chmod 0755 && \
-    find /opt/solr -type f -print0 | xargs -0 chmod 0644 && \
-    chmod -R 0755 /opt/solr/bin /opt/solr/contrib/prometheus-exporter/bin/solr-exporter /opt/solr/server/scripts/cloud-scripts && \
-    cp /opt/solr/bin/solr.in.sh /etc/default/solr.in.sh && \
+    mkdir -p $SOLR_INSTALL_DIR && \
+    rm -rf $SOLR_INSTALL_DIR && \
+    cp -r solr/packaging/build/dev $SOLR_INSTALL_DIR && \
+    chown -R 0:0 $SOLR_INSTALL_DIR && \
+    find $SOLR_INSTALL_DIR -type d -print0 | xargs -0 chmod 0755 && \
+    find $SOLR_INSTALL_DIR -type f -print0 | xargs -0 chmod 0644 && \
+    chmod -R 0755 $SOLR_INSTALL_DIR/bin $SOLR_INSTALL_DIR/contrib/prometheus-exporter/bin/solr-exporter $SOLR_INSTALL_DIR/server/scripts/cloud-scripts && \
+    cp $SOLR_INSTALL_DIR/bin/solr.in.sh /etc/default/solr.in.sh && \
     chown 0:0 /etc/default/solr.in.sh && \
     chmod 0664 /etc/default/solr.in.sh && \
     mkdir -p $SOLR_HOME $SOLR_LOGS_DIR /opt/mnt/bin && \
-    cp /opt/solr/server/solr/solr.xml /opt/solr/server/solr/zoo.cfg $SOLR_HOME && \
-    cp /opt/solr/server/resources/log4j2.xml $LOG4J_PROPS && \
+    cp $SOLR_INSTALL_DIR/server/solr/solr.xml $SOLR_INSTALL_DIR/server/solr/zoo.cfg $SOLR_HOME && \
+    cp $SOLR_INSTALL_DIR/server/resources/log4j2.xml $LOG4J_PROPS && \
     chown -R $SOLR_USER:0 /var/solr && \
-    chown -R $SOLR_USER:0 /opt/solr && \
+    chown -R $SOLR_USER:0 $SOLR_INSTALL_DIR && \
     yum clean all && \
     rm -rf /var/cache/yum && \
     cd / && \
