--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     depends_on:
       - zoo
     volumes:
-      - ./solr/mnt/configsets/wikipedia:/opt/solr/server/solr/configsets/wikipedia
+      - ./solr/configsets:/opt/solr/configsets
       - ./solr/mnt/solr1/data:/var/solr/data
       - ./solr/mnt/solr1/logs:/var/solr/logs
       - ./solr/mnt/solr1/benchmarks:/var/solr/benchmarks
@@ -27,7 +27,7 @@ services:
       - 8984:8983
       - 5006:5005
     volumes:
-      - ./solr/mnt/configsets/wikipedia:/opt/solr/server/solr/configsets/wikipedia
+      - ./solr/configsets:/opt/solr/configsets
       - ./solr/mnt/solr2/data:/var/solr/data
       - ./solr/mnt/solr2/logs:/var/solr/logs
       - ./solr/mnt/solr2/benchmarks:/var/solr/benchmarks
